# starting-ragchatbot-codebase

./: CLAUDE.md  SEQUENTIAL_TOOL_CALLING_REFACTOR.md  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_fastapi_endpoints.py  test_live_system_debug.py  test_rag_system_integration.py  test_real_system_issues.py  test_tool_manager.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh
